fix: Add pygments syntax hightlighting configuration

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -24,7 +24,13 @@ theme:
 markdown_extensions:
   - pymdownx.arithmatex:
       generic: true
-
+  - pymdownx.highlight:
+      anchor_linenums: true
+      line_spans: __span
+      pygments_lang_class: true
+  - pymdownx.inlinehilite
+  - pymdownx.snippets
+  - pymdownx.superfences
 extra_javascript:
   - javascripts/katex.js
   - https://unpkg.com/katex@0/dist/katex.min.js
