fix: Add snippet copy button

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -21,6 +21,8 @@ theme:
       accent: lime
   icon:
     logo: material/book
+  features:
+    - content.code.copy
 markdown_extensions:
   - pymdownx.arithmatex:
       generic: true
