style: Change font to Arvo

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,8 @@
 site_name: Personal notes
 site_url: https://tdinev.github.io/notes
 theme:
+  font:
+    test: Arvo
   name: material
   palette:
     # Palette toggle for light mode
